fix(Forms) - compact layout forms subtexts are not aligned

--- a/projects/angular/src/forms/styles/_range.clarity.scss
+++ b/projects/angular/src/forms/styles/_range.clarity.scss
@@ -37,7 +37,7 @@
     }
     .clr-validate-icon {
       position: relative;
-      top: 8px;
+      top: tokens.$cds-global-space-5;
     }
   }
 
